--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <!-- NAVLINKS -->
-          <a href="#/about" class="nav-link">About</a>
+          <!-- 🧪 does the link work, does it take us to the right page? -->
+          <a href="#/cars" class="nav-link">Cars 🚗</a>
         </div>
       </div>
       <div class="flex-grow-1 justify-content-end align-items-center d-flex" id="authstate"></div>
