Jobs functionality increased

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <!-- 🧪 does the link work, does it take us to the right page? -->
           <a href="#/cars" class="nav-link">Cars 🚗</a>
           <a href="#/houses" class="nav-link">Houses 🏘️</a>
+          <a href="#/jobs" class="nav-link">Jobs ⚒️</a>
         </div>
       </div>
       <div class="flex-grow-1 justify-content-end align-items-center d-flex" id="authstate"></div>
